Adding query latency metrics (#311)
### Description
This PR adds comprehensive query execution latency metrics to the TSDB plugin, enabling visibility into overall query performance and breakdown of collect/reduce phase timings across distributed shards.

Added 6 new histogram metrics that capture:
Overall query execution latency - Always available (no profiling overhead)
Collect/Reduce phase MAX latency - Slowest collect/reduce latency - Available only when profile is set to true
Collect/Reduce phase TOTAL work - CPU work across all shards - Available only when profile is set to true
Collect+Reduce phase MAX latency - Slowest shard total latency - Available only when profile is set to true

Signed-off-by: Venketep Prasad <venketepprasad@uber.com>